Room - bugfixed on firefox: update position of large video on initiailization

--- a/css/room.css
+++ b/css/room.css
@@ -44,6 +44,7 @@ body {
     height: 100%;
 /*    padding-bottom: 120px;*/
     overflow: hidden;
+    visibility: hidden;
 }
 
 .large-video {
